Fix jumpbox animation

--- a/app/webroot/assets/css/base.css
+++ b/app/webroot/assets/css/base.css
@@ -1096,6 +1096,28 @@ a:focus {
   opacity: 0;
   transition: opacity .5s;
 }
+/* .jb-hsplit__bg-icon {
+  position: absolute;
+  width: 125%;
+  height: 125%;
+  transform: rotate(-15deg);
+  opacity: .2;
+ } */
+ /* .jb-hsplit__bg-icon img {
+   width: 100%;
+   margin-top: 50%;
+  transform: translateY(-50%);
+ } */
+ .jb-hsplit__overlay {
+   opacity: 0;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   position: absolute;
+   width: 100%;
+   height: 100%;
+  transition: all .25s;
+}
 .jb-hsplit__cover {
   height: 300px;
   width: 100%;
